force textarea minimum size to prevent overlaping

--- a/app/assets/stylesheets/user_remarks/remark_tag.css.sass
+++ b/app/assets/stylesheets/user_remarks/remark_tag.css.sass
@@ -62,6 +62,7 @@
       textarea
         resize: none
         height: 130px !important
+        min-height: 130px !important
       input
         width: 100%
     .remark-action
